--- a/tests/BattleShip.Application.Test/BattleShip.Application.Test.csproj
+++ b/tests/BattleShip.Application.Test/BattleShip.Application.Test.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.11.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
@@ -14,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BattleShip.Application\BattleShip.Application.csproj" />
-    <ProjectReference Include="..\BattleShip.Domain\BattleShip.Domain.csproj" />
+    <ProjectReference Include="..\..\src\BattleShip.Application\BattleShip.Application.csproj" />
+    <ProjectReference Include="..\..\src\BattleShip.Domain\BattleShip.Domain.csproj" />
   </ItemGroup>
 
 </Project>
