--- a/tests/BattleShip.Domain.Test/BattleShip.Domain.Test.csproj
+++ b/tests/BattleShip.Domain.Test/BattleShip.Domain.Test.csproj
@@ -7,14 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.11.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BattleShip.Application\BattleShip.Application.csproj" />
-    <ProjectReference Include="..\BattleShip.Domain\BattleShip.Domain.csproj" />
+    <ProjectReference Include="..\..\src\BattleShip.Application\BattleShip.Application.csproj" />
+    <ProjectReference Include="..\..\src\BattleShip.Domain\BattleShip.Domain.csproj" />
   </ItemGroup>
 
 </Project>
